--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               </g>
             </svg>
           </div>
-          <div class='item' onclick="window.open('https:/santihdzs.com/2048','mywindow3');" style="cursor: pointer;"&nbsp;>
+          <div class='item' onclick="window.open('https:/2048','mywindow3');" style="cursor: pointer;"&nbsp;>
             <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
               <defs>
                 <clipPath id='clip-3'>
