Added safariOverflow body class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" href="/images/icon.svg" />
   </head>
 
-  <body>
+  <body class="safariOverflow">
     <!-- MOBILE -->
     <div id="mobileicons">
       <ul class="mobilewrapper">
