--- a/index.html
+++ b/index.html
@@ -62,23 +62,20 @@
     
     <div class="ipsGrid_span7 ipsType_left">
     <h2 class="ipsGrid_span5 gs_reveal gs_reveal_fromLeft">About me</h2>
-    <p class="gs_reveal">I&rsquo;m Santi, a student from Mexico City learning about computer science and web development. Over time, I&rsquo;ve come across websites and ideas that caught my eye because of their uniqueness and ingenuity. Eventually, this interest culminated, inspiring me to create some of my own&nbsp;projects.</p>
-    <p class="gs_reveal">This website started as a way for me to play around with HTML; it has since become a repository for some of my favorite&nbsp;projects.</p>
+    <p class="gs_reveal">I&rsquo;m Santi, a computer science student from Mexico City learning about software and web development. Over time, I&rsquo;ve come across websites and ideas that caught my eye because of their uniqueness and ingenuity. Eventually, this interest culminated, inspiring me to create some of my own&nbsp;projects.</p>
+    <p class="gs_reveal">I created this website three years ago as a way for me to play around with HTML; it has since become a way for me to document my learning and some of my favorite&nbsp;projects.</p>
     </div>
 
     <div class="ipsGrid_span7 ipsType_left">
     <h2 class="ipsGrid_span5 gs_reveal gs_reveal_fromLeft">My work</h2>
-    <p class="gs_reveal">Clicking on the header above takes you to a portfolio containing all of my work, along with more details about it. My projects range anywhere from game recreations to some math related&nbsp;code.</p>
-    <p class="gs_reveal">Alternatively, here are previews of some sites I really enjoy; you can click on any preview to directly visit&nbsp;it.</p>
+    <p class="gs_reveal">Over time, I've had the opportunity to work on various projects related to different branches of computer science.  My favorite pieces of work range from papers on cybersecurity and mathematical modeling, to full-stack applications like&nbsp;MyTutor.</p>
+    <p class="gs_reveal">Here are some sites I currently really enjoy; you can click on any card to directly visit the site it&nbsp;displays.</p>
     <div class='container ipsGrid_span5'>
       <main>
         <div id="cards" class="grid cards">
           <div class="gs_reveal gs_reveal_fromLeft grid-item item-1 card card1">
             <a href="https://github.com/santihdzs/EWMA-modeling" target="_blank">link</a>
             <div class="card-content">
-              <div class="gs_reveal card-image">
-                <img src="../images/BTMODEL.png">
-              </div>
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
@@ -92,9 +89,6 @@
           <div class="grid-item item-2 card card2">
             <a href="https://github.com/santihdzs/mytutor" target="_blank">link</a>
             <div class="card-content">
-              <div class="gs_reveal card-image">
-                <img src="../images/MyTutor.png">
-              </div>
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
@@ -145,30 +139,27 @@
             </div>
           </div>
           <div class="gs_reveal gs_reveal_fromRight grid-item item-6 card card6">
-            <a href="https://github.com/santihdzs/video-chess" target="_blank">link</a>
+            <a href="https://santihdzs.com/wordle" target="_blank">link</a>
             <div class="card-content">
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
-                    <h3>Video-Chess</h3>  
-                    <h4>Classic game with a twist.</h4>
+                    <h3>Wordle</h3>  
+                    <h4>Unlimited wordle</h4>
                   </div>    
                 </div>
               </div>
             </div>
           </div>
           <div class="grid-item item-7 card card7">
-            <a href="https://santihdzs.com/wordle" target="_blank">link</a>
+            <a href="https://github.com/santihdzs/RSA" target="_blank">link</a>
             <div class="card-content">
-              <div class="gs_reveal card-image">
-                <img src="../images/Wordle.png">
-              </div>
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <i class="fa-duotone fa-apartment"></i>
                   <div class="card-info-title">
-                    <h3>Wordle</h3>  
-                    <h4>Uncensored and unlimited.</h4>
+                    <h3>RSA Encryption</h3>  
+                    <h4>Paper about the security and reliability of RSA encryption.</h4>
                   </div>    
                 </div>
               </div>
