Added leetcodes and price tracker to projects section

--- a/index.html
+++ b/index.html
@@ -113,26 +113,26 @@
             </div>
           </div>
           <div class="gs_reveal grid-item item-4 card card4">
-            <a href="https://santihdzs.com/draw" target="_blank">link</a>
+            <a href="/#" target="_blank">link</a>
             <div class="card-content">
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
-                    <h3>Draw</h3>  
-                    <h4>JavaScript drawing engine.</h4>
+                    <h3>Price Tracker</h3>  
+                    <h4>Work in progress.</h4>
                   </div>    
                 </div>
               </div>
             </div>
           </div>
           <div class="gs_reveal grid-item item-5 card card5">
-            <a href="https://santihdzs.com/step" target="_blank">link</a>
+            <a href="https://github.com/santihdzs/leetcodes" target="_blank">link</a>
             <div class="card-content">
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
-                    <h3>Step</h3>  
-                    <h4>My attempt at a DAW.</h4>
+                    <h3>Leetcodes</h3>  
+                    <h4>My solutions for some Leetcode problems.</h4>
                   </div>    
                 </div>
               </div>
