--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="ipsGrid_span7 ipsType_left">
     <h2 class="ipsGrid_span5 gs_reveal gs_reveal_fromLeft">My work</h2>
     <p class="gs_reveal">Over time, I've had the opportunity to work on various projects related to different branches of computer science.  My favorite pieces of work range from papers on cybersecurity and mathematical modeling, to full-stack applications like&nbsp;MyTutor.</p>
-    <p class="gs_reveal">Here are some sites I currently really enjoy; you can click on any card to directly visit the site it&nbsp;displays.</p>
+    <p class="gs_reveal">Here are some projects I currently really enjoy; you can click on any card to directly visit the site it&nbsp;displays.</p>
     <div class='container ipsGrid_span5'>
       <main>
         <div id="cards" class="grid cards">
@@ -93,33 +93,33 @@
                 <div class="card-info">
                   <div class="card-info-title">
                     <h3>MyTutor</h3>  
-                    <h4>Tutoring app built with Bun and React.</h4>
+                    <h4>Tutoring app built with Node and SQL.</h4>
                   </div>    
                 </div>
               </div>
             </div>
           </div>
           <div class="grid-item item-3 card card3">
-            <a href="https://santihdzs.com/2048" target="_blank">link</a>
+            <a href="https://marketplace.visualstudio.com/items?itemName=santihdzs.santihdzs-theme" target="_blank">link</a>
             <div class="card-content">
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
-                    <h3>2048</h3>  
-                    <h4>Animations not included.</h4>
+                    <h3>Theme</h3>  
+                    <h4>My custom VS Code theme.</h4>
                   </div>    
                 </div>
               </div>
             </div>
           </div>
           <div class="gs_reveal grid-item item-4 card card4">
-            <a href="/#" target="_blank">link</a>
+            <a href="https://github.com/santihdzs/dotfiles" target="_blank">link</a>
             <div class="card-content">
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
-                    <h3>Price Tracker</h3>  
-                    <h4>Work in progress.</h4>
+                    <h3>Dotfiles</h3>  
+                    <h4>My config files and setup instructions.</h4>
                   </div>    
                 </div>
               </div>
