Swapped wordle card for photo cleaner.

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
             </div>
           </div>
           <div class="gs_reveal gs_reveal_fromRight grid-item item-6 card card6">
-            <a href="https://santihdzs.com/wordle" target="_blank">link</a>
+            <a href="https://github.com/santihdzs/photo-cleaner" target="_blank">link</a>
             <div class="card-content">
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
-                    <h3>Wordle</h3>  
-                    <h4>Unlimited wordle</h4>
+                    <h3>Photo Cleaner</h3>  
+                    <h4>iOS app to clear your photo library </h4>
                   </div>    
                 </div>
               </div>
