Removed sc icon from mobile.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <li class="icon instagrammobile" onclick="NewTabigm()">
   <span><i class="fab fa-instagram"></i></span>
 </li>
-<li class="icon snapchatmobile" onclick="NewTabscm()">
+<!-- <li class="icon snapchatmobile" onclick="NewTabscm()">
   <span><i class="fab fa-snapchat"></i></span>
-</li>
+</li> -->
 <li class="icon spotifymobile" onclick="NewTabspm()">
   <span><i class="fab fa-spotify"></i></span>
 </li>
