Swapped Leetcode card for Fretboard.

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
     <div class="ipsGrid_span7 ipsType_left">
     <h2 class="ipsGrid_span5 gs_reveal gs_reveal_fromLeft">My Work</h2>
-    <p class="gs_reveal">Over time, I've had the opportunity to work on various projects related to different branches of computer science.  My favorite pieces of work range from papers on cybersecurity and mathematical modeling, to full-stack applications like&nbsp;MyTutor.</p>
-    <p class="gs_reveal">Here are some projects I currently really enjoy; you can click on any card to directly visit the site it&nbsp;displays.</p>
+    <p class="gs_reveal">Over time, I've had the opportunity to work on various projects related to different branches of computer science.  My favorite pieces of work range from papers on cybersecurity and mathematical modeling, to full-stack&nbsp;applications.</p>
+    <p class="gs_reveal">Here are some projects I currently enjoy; feel free to click on any card to directly visit the site it&nbsp;displays.</p>
     <div class='container ipsGrid_span5'>
       <main>
         <div id="cards" class="grid cards">
@@ -134,13 +134,13 @@
             </div>
           </div>
           <div class="gs_reveal grid-item item-5 card card5">
-            <a href="https://github.com/santihdzs/leetcodes" target="_blank">link</a>
+            <a href="https://santihdzs.com/fretboard" target="_blank">link</a>
             <div class="card-content">
               <div class="card-info-wrapper">
                 <div class="card-info">
                   <div class="card-info-title">
-                    <h3>Leetcodes</h3>  
-                    <h4>My solutions for some Leetcode problems.</h4>
+                    <h3>Fretboard</h3>  
+                    <h4>Interactive fretboard to learn guitar.</h4>
                   </div>    
                 </div>
               </div>
