Updated about me.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="ipsGrid_span7 ipsType_left">
     <h2 class="ipsGrid_span5 gs_reveal gs_reveal_fromLeft">About Me</h2>
     <p class="gs_reveal">I&rsquo;m Santi, a computer science student and researcher from Mexico City. Over time, I&rsquo;ve come across projects that caught my eye because of their uniqueness and ingenuity. Eventually, this interest culminated, inspiring me to create some of my own&nbsp;projects.</p>
-    <p class="gs_reveal">I created this website three years ago as a way for me to play around with HTML; it has since become a way for me to document my learning and some of my favorite&nbsp;projects.</p>
+    <p class="gs_reveal">I created this website four years ago as a way for me to play around with HTML; it has since become a way for me to document my learning and some of my favorite&nbsp;projects.</p>
     </div>
 
     <div class="ipsGrid_span7 ipsType_left">
